--- a/package.json
+++ b/package.json
@@ -9,13 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.3",
     "@types/node": "18.11.10",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@vercel/edge-config": "^0.1.0",
     "concurrently": "^7.6.0",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
